--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           terraform_version: '1.0.0'
 
+      - name: Set up environment variable from secret
+        run: echo "TF_VAR_vpc_id=${{ secrets.VPC_ID }}" >> $GITHUB_ENV
+
       - name: Terraform Init
         id: init
         run: terraform init
