--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,6 +30,14 @@ jobs:
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
+      - name: Check environment variables setup
+        run: |
+          echo "VPC ID set: ${{ env.TF_VAR_vpc_id }}"
+          echo "Master username set: ${{ env.TF_VAR_master_username }}"
+          echo "DB password set: ${{ env.TF_VAR_db_password }}"
+          echo "AWS Access Key set: ${{ env.AWS_ACCESS_KEY_ID }}"
+          echo "AWS Secret Key set: ${{ env.AWS_SECRET_ACCESS_KEY }}"
+
       - name: Terraform Init
         id: init
         run: terraform init
