--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,5 +1,3 @@
-name: 'Terraform'
-
 on:
   push:
     branches:
@@ -40,14 +38,17 @@ jobs:
           echo "AWS Secret Access Key set: ${{ env.TF_VAR_aws_secret_access_key }}"
 
       - name: Terraform Init
+        id: init
         run: terraform init -input=false
 
       - name: Terraform Format
+        id: fmt
         run: terraform fmt -check
 
       - name: Terraform Plan
+        id: plan
         run: terraform plan -input=false
 
       - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve
